--- a/editor source/SPNATI Character Editor/Properties/Resources.resx
+++ b/editor source/SPNATI Character Editor/Properties/Resources.resx
@@ -430,4 +430,10 @@
   <data name="EllipsisFilled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\EllipsisFilled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FileMissing" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\FileMissing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CopyRect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\CopyRect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
