--- a/editor source/SPNATI Character Editor/Properties/Resources.resx
+++ b/editor source/SPNATI Character Editor/Properties/Resources.resx
@@ -436,4 +436,16 @@
   <data name="CopyRect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\CopyRect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CopyCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\CopyCode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="InsertColumn" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\InsertColumn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SortHorizontal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\SortHorizontal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Missing" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Missing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
