--- a/editor source/SPNATI Character Editor/Properties/Resources.resx
+++ b/editor source/SPNATI Character Editor/Properties/Resources.resx
@@ -454,4 +454,7 @@
   <data name="PoseList" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\PoseList.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Replace" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Replace.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
