reviving epilogue timeline system

--- a/editor source/SPNATI Character Editor/Properties/Resources.resx
+++ b/editor source/SPNATI Character Editor/Properties/Resources.resx
@@ -457,4 +457,31 @@
   <data name="Replace" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Replace.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="LinkToEnd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\LinkToEnd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LinkToEndFill" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\LinkToEndFill.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="KeyframeSplit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\KeyframeSplit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="AddEmitter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\AddEmitter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="AddSprite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\AddSprite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="AddTextBox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\AddTextBox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="KeyTypeBegin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\KeyTypeBegin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="KeyTypeNormal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\KeyTypeNormal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="KeyTypeSplit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\KeyTypeSplit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
