--- a/editor source/SPNATI Character Editor/Properties/Resources.resx
+++ b/editor source/SPNATI Character Editor/Properties/Resources.resx
@@ -484,4 +484,7 @@
   <data name="KeyTypeSplit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\KeyTypeSplit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AddEvent" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\AddEvent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
