--- a/editor source/SPNATI Character Editor/Properties/Resources.resx
+++ b/editor source/SPNATI Character Editor/Properties/Resources.resx
@@ -490,4 +490,7 @@
   <data name="TransferKeyframe" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\TransferKeyframe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RangeChooser" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\RangeChooser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
